<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/centerLayout"
        android:layout_width="392dp"
        android:layout_height="470dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/slogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/videohubTextSlogan"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textFontWeight="900"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/sloganDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_every_second_count_slogan"
            android:textAlignment="center"
            android:textColor="#E0FBFBFB" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_account_name_text"
                android:textColor="#FFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password_text"
                android:inputType="textPassword"
                android:textColor="#FFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/login_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/or_text"
            android:textAlignment="center"
            android:textColor="#96FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_and_start_your_journey_with_us_text"
            android:textAlignment="center"
            android:textColor="#D0FFFFFF" />

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password_text"
            android:textAlignment="center"
            android:textColor="#A6FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="335dp"
        android:layout_height="230dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerLayout">

        <ImageButton
            android:id="@+id/googleLoginButton"
            android:layout_width="90dp"
            android:layout_height="82dp"
            android:layout_marginStart="60dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/img_1"
            android:contentDescription="@string/login_with_gmail_text"
            android:scaleType="fitCenter" />

        <ImageButton
            android:id="@+id/facebookLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/img_2"
            android:contentDescription="@string/login_with_facebook_text"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="237dp"
        android:contentDescription="@string/imgdecore_text"
        app:layout_constraintBottom_toTopOf="@+id/centerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_3"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="192dp"
        android:layout_height="242dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/imgdecore_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centerLayout"
        app:srcCompat="@drawable/img_4"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgdecore_text"
        app:layout_constraintBottom_toTopOf="@+id/centerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265"
        app:srcCompat="@drawable/img_6"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="75dp"
        android:layout_height="221dp"
        android:layout_marginTop="205dp"
        android:contentDescription="@string/imgdecore_text"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_5"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="81dp"
        android:layout_height="74dp"
        android:layout_marginTop="135dp"
        app:layout_constraintBottom_toTopOf="@+id/centerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>