<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".activities.RegisterActivity">


    <ScrollView
        android:layout_width="361dp"
        android:layout_height="666dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Main Registration Form Layout -->
        <LinearLayout
            android:id="@+id/centerLayout"
            android:layout_width="357dp"
            android:layout_height="672dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Slogan Text -->
            <TextView
                android:id="@+id/slogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/videohubTextSlogan"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textFontWeight="900"
                android:textSize="34sp" />

            <!-- Description Text -->
            <TextView
                android:id="@+id/sloganDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_every_second_count_slogan"
                android:textAlignment="center"
                android:textColor="#E0FBFBFB" />

            <!-- Container for First Name and Middle Name (First Column) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <!-- First Name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="First_name"
                        android:textColor="#FFFF" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Middle Name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/middleNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/middleNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Middle_name"
                        android:textColor="#FFFF" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Last Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Last_name"
                    android:textColor="#FFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Container for Account Name and Email (Second Column) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!-- Account Name -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/accountNameLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/accountNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_account_name_text"
                        android:textColor="#FFFF" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter_email_text"
                        android:textColor="#FFFF" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password_text"
                    android:inputType="textPassword"
                    android:textColor="#FFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date of Birth -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter age"
                    android:inputType="number"
                    android:textColor="#FFFF" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!-- Image URL (optional) -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/imageUrlLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/imageUrlInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:hint="@string/enter_image_url"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:textColor="#FFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/uploadImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/upload_image" />
            </LinearLayout>

            <!-- Register Button -->
            <Button
                android:id="@+id/registerButton"
                android:layout_width="253dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <!-- Or Text -->
            <TextView
                android:id="@+id/orText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/or_text"
                android:textAlignment="center"
                android:textColor="#96FFFFFF"
                android:textSize="20sp" />

            <!-- Sign In Text -->
            <TextView
                android:id="@+id/signInText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/already_have_an_account_go_back_to_login_text"
                android:textAlignment="center"
                android:textColor="#D0FFFFFF" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
